custom-elements: document.createElementNS() should set prefixes to custom elements.

We had a bug that createElementNS() ignored prefixes.
New behavior matches to the specification and Firefox.

* Document-createElementNS.html:
  Fix a copypasta error.

* ScriptCustomElementDefinition::CreateElementSync:
  Implement Step 6.1.10.

* Document::createElementNS:
  Fix an argument of definition lookup.

* CustomElement::CreateUndefinedElement:
  Use Document::CreateRawElement(), which sets prefixes correctly,
  instead of HTMLElementFactory::createHTMLElement().

* ustomElementDefinition::CreateElementAsync:
  Use Document::CreateRawElement(), which sets prefixes correctly,
  instead of HTMLElementFactory::createRawHTMLElement().

Bug: 806639
Change-Id: I74b431d4475d7cf84f65ab0ff1b24773cbc64079
Reviewed-on: https://chromium-review.googlesource.com/892802
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532821}
Former-commit-id: 18ac0a07d07f8687258809c8b98c678167e6ae7c